Schema fix to move extended attributes and add subscription list

--- a/config/channel-settings.json
+++ b/config/channel-settings.json
@@ -539,7 +539,7 @@
                 },
                 "entityId": {
                   "title": "Entity ID",
-                  "type": "string"
+                  "type": "integer"
                 }
               },
               "required": [
