Add Put Customer tests

--- a/config/channel-settings.json
+++ b/config/channel-settings.json
@@ -384,7 +384,7 @@
       },
       "documentDef": {
         "schema": {},
-        "referenceLocation": {"customerBusinessReferences": ["", ""]}
+        "referenceLocation": {"customerBusinessReferences": ["UniqueIdentifier"]}
       }
     },
     {
@@ -418,7 +418,7 @@
       },
       "documentDef": {
         "schema": {},
-        "referenceLocation": {"customerBusinessReferences": ["", ""]}
+        "referenceLocation": {"customerBusinessReferences": ["UniqueIdentifier"]}
       }
     },
     {
