--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "lodash.get": "^4.4.2",
     "request": "2.83.0",
-    "request-promise-native": "1.0.5"
+    "request-promise": "4.2.2"
   },
   "devDependencies": {
     "nock": "9.2.3",
